--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "build": "qwik build",
     "build.client": "vite build",
     "build.preview": "vite build --ssr src/entry.preview.tsx",
+    "build.server": "vite build -c adaptors/express/vite.config.ts",
     "build.types": "tsc --incremental --noEmit",
     "dev": "vite --mode ssr",
     "dev.debug": "node --inspect-brk ./node_modules/vite/bin/vite.js --mode ssr --force",
@@ -16,29 +17,33 @@
     "fmt.check": "prettier --check .",
     "lint": "eslint src/**/*.ts*",
     "preview": "qwik build preview && vite preview --open",
-    "serve": "echo 'Run \"npm run qwik add\" to install a server adaptor'",
+    "serve": "node server/entry.express",
     "start": "vite --open --mode ssr",
     "qwik": "qwik"
   },
   "devDependencies": {
     "@builder.io/qwik": "0.13.3",
     "@builder.io/qwik-city": "0.0.122",
+    "@types/compression": "^1.7.2",
     "@types/cookie": "^0.5.1",
     "@types/eslint": "8.4.10",
+    "@types/express": "4.17.14",
     "@types/node": "latest",
-    "@typescript-eslint/eslint-plugin": "5.42.0",
-    "@typescript-eslint/parser": "5.42.0",
+    "@typescript-eslint/eslint-plugin": "5.43.0",
+    "@typescript-eslint/parser": "5.43.0",
+    "compression": "^1.7.4",
     "eslint": "8.27.0",
-    "eslint-plugin-qwik": "0.12.1",
-    "node-fetch": "3.2.10",
+    "eslint-plugin-qwik": "0.13.3",
+    "express": "4.18.2",
+    "node-fetch": "3.3.0",
     "prettier": "2.7.1",
-    "typescript": "4.8.4",
-    "vite": "3.2.2",
+    "typescript": "4.9.3",
+    "vite": "3.2.4",
     "vite-tsconfig-paths": "3.5.2"
   },
   "dependencies": {
     "cookie": "^0.5.0",
-    "next-auth": "^4.16.2",
+    "next-auth": "^4.16.4",
     "zod": "^3.19.1"
   }
 }
