--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,3 @@
 {
-  "cSpell.words": [
-    "NEXTAUTH",
-    "qwik",
-    "signin",
-    "signout"
-  ]
+  "cSpell.words": ["NEXTAUTH", "qwik", "signin", "signout"]
 }
