--- a/package.json
+++ b/package.json
@@ -23,28 +23,28 @@
     "qwik": "qwik"
   },
   "devDependencies": {
-    "@builder.io/qwik": "0.14.0",
-    "@builder.io/qwik-city": "0.0.125",
+    "@builder.io/qwik": "0.16.2",
+    "@builder.io/qwik-city": "0.1.0-beta9",
     "@types/compression": "^1.7.2",
     "@types/cookie": "^0.5.1",
     "@types/eslint": "8.4.10",
-    "@types/express": "4.17.14",
+    "@types/express": "4.17.15",
     "@types/node": "latest",
-    "@typescript-eslint/eslint-plugin": "5.44.0",
-    "@typescript-eslint/parser": "5.44.0",
+    "@typescript-eslint/eslint-plugin": "5.48.2",
+    "@typescript-eslint/parser": "5.48.2",
     "compression": "^1.7.4",
-    "eslint": "8.28.0",
-    "eslint-plugin-qwik": "0.14.0",
+    "eslint": "8.32.0",
+    "eslint-plugin-qwik": "0.16.2",
     "express": "4.18.2",
-    "node-fetch": "3.3.0",
-    "prettier": "2.7.1",
-    "typescript": "4.9.3",
-    "vite": "3.2.4",
-    "vite-tsconfig-paths": "3.6.0"
+    "prettier": "2.8.3",
+    "typescript": "4.9.4",
+    "vite": "4.0.4",
+    "vite-tsconfig-paths": "4.0.5"
   },
   "dependencies": {
     "cookie": "^0.5.0",
-    "next-auth": "^4.17.0",
-    "zod": "^3.19.1"
+    "@auth/core": "0.2.5",
+    "zod": "^3.20.2",
+    "undici": "5.15.1"
   }
 }
