--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@types/eslint": "8.4.10",
     "@types/express": "4.17.15",
     "@types/node": "latest",
+    "@types/set-cookie-parser": "^2.4.2",
     "@typescript-eslint/eslint-plugin": "5.48.2",
     "@typescript-eslint/parser": "5.48.2",
     "compression": "^1.7.4",
@@ -42,9 +43,10 @@
     "vite-tsconfig-paths": "4.0.5"
   },
   "dependencies": {
-    "cookie": "^0.5.0",
     "@auth/core": "0.2.5",
-    "zod": "^3.20.2",
-    "undici": "5.15.1"
+    "cookie": "^0.5.0",
+    "set-cookie-parser": "^2.5.1",
+    "undici": "5.15.1",
+    "zod": "^3.20.2"
   }
 }
