--- a/package.json
+++ b/package.json
@@ -23,29 +23,27 @@
     "qwik": "qwik"
   },
   "devDependencies": {
-    "@builder.io/qwik": "0.17.5",
-    "@builder.io/qwik-city": "0.1.1",
+    "@builder.io/qwik": "0.20.1",
+    "@builder.io/qwik-city": "0.5.2",
     "@types/compression": "^1.7.2",
-    "@types/cookie": "^0.5.1",
-    "@types/eslint": "8.21.0",
+    "@types/eslint": "8.21.1",
     "@types/express": "4.17.17",
     "@types/node": "latest",
-    "@types/set-cookie-parser": "^2.4.2",
-    "@typescript-eslint/eslint-plugin": "5.51.0",
-    "@typescript-eslint/parser": "5.51.0",
+    "@typescript-eslint/eslint-plugin": "5.54.1",
+    "@typescript-eslint/parser": "5.54.1",
     "compression": "^1.7.4",
-    "eslint": "8.34.0",
-    "eslint-plugin-qwik": "0.17.5",
+    "eslint": "8.35.0",
+    "eslint-plugin-qwik": "0.20.1",
     "express": "4.18.2",
     "prettier": "2.8.4",
     "typescript": "4.9.5",
-    "vite": "4.1.1",
+    "vite": "4.1.4",
     "vite-tsconfig-paths": "4.0.5"
   },
   "dependencies": {
-    "@auth/core": "0.4.0",
-    "cookie": "^0.5.0",
-    "undici": "5.18.0",
-    "zod": "^3.20.6"
+    "@auth/core": "0.5.1",
+    "@builder.io/qwik-auth": "^0.0.3",
+    "undici": "5.20.0",
+    "zod": "^3.21.2"
   }
 }
