--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@types/eslint": "8.21.1",
     "@types/express": "4.17.17",
     "@types/node": "latest",
+    "@types/set-cookie-parser": "^2.4.2",
     "@typescript-eslint/eslint-plugin": "5.54.1",
     "@typescript-eslint/parser": "5.54.1",
     "compression": "^1.7.4",
@@ -42,7 +43,7 @@
   },
   "dependencies": {
     "@auth/core": "0.5.1",
-    "@builder.io/qwik-auth": "^0.0.4",
+    "set-cookie-parser": "^2.5.1",
     "undici": "5.20.0",
     "zod": "^3.21.4"
   }
