--- a/package.json
+++ b/package.json
@@ -23,8 +23,8 @@
     "qwik": "qwik"
   },
   "devDependencies": {
-    "@builder.io/qwik": "latest",
-    "@builder.io/qwik-city": "latest",
+    "@builder.io/qwik": "0.21.0",
+    "@builder.io/qwik-city": "0.5.3",
     "@types/compression": "^1.7.2",
     "@types/eslint": "8.21.1",
     "@types/express": "4.17.17",
@@ -34,7 +34,7 @@
     "@typescript-eslint/parser": "5.54.1",
     "compression": "^1.7.4",
     "eslint": "8.35.0",
-    "eslint-plugin-qwik": "latest",
+    "eslint-plugin-qwik": "0.21.0",
     "express": "4.18.2",
     "prettier": "2.8.4",
     "typescript": "4.9.5",
