--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,12 +3,7 @@
     "allowJs": true,
     "target": "ES2017",
     "module": "ES2020",
-    "lib": [
-      "es2020",
-      "DOM",
-      "WebWorker",
-      "DOM.Iterable"
-    ],
+    "lib": ["es2020", "DOM", "WebWorker", "DOM.Iterable"],
     "jsx": "react-jsx",
     "jsxImportSource": "@builder.io/qwik",
     "strict": true,
@@ -20,20 +15,11 @@
     "isolatedModules": true,
     "outDir": "tmp",
     "noEmit": true,
-    "types": [
-      "node",
-      "vite/client"
-    ],
+    "types": ["node", "vite/client"],
     "paths": {
-      "~/*": [
-        "./src/*"
-      ]
+      "~/*": ["./src/*"]
     }
   },
-  "files": [
-    "./.eslintrc.cjs"
-  ],
-  "include": [
-    "src"
-  ]
+  "files": ["./.eslintrc.cjs"],
+  "include": ["src"]
 }
